# xsocket

./: CMakeLists.txt  README.md  client.cpp  log.txt  main.cpp  main_.cpp  server.cpp
README.assets/: 20171106202553172  20171106202609548
mySocket/includes/: mySocket.h
mySocket/src/: mySocket.cpp
mysocket/include/: mysocket.h
mysocket/includes/: mysocket.h
mysocket/src/: mysocket.cpp
test/: client.cpp  server.cpp  test.cpp
xsocket/include/: xsocket copy.h  xsocket.h
